[gd_scene load_steps=2 format=3 uid="uid://b8hthv8gs3mi4"]

[ext_resource type="Script" path="res://scripts/ui/ui.gd" id="1_64k5k"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_64k5k")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HPLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Keys: 0"

[node name="KeysLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Keys: 0"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 1

[node name="TextLabel" type="Label" parent="Control/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Some text here"

[node name="TextTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
